# libmumbleclient

./: .gitignore  .gitmodules  CMakeLists.txt  CryptState.cpp  CryptState.h  PacketDataStream.h  README.md  channel.h  client.cc  client.h  client_lib.cc  client_lib.h  logging.cpp  logging.h  main.cc  messages.h  settings.h  user.h  visibility.h
celt-build/: CMakeLists.txt  config.h
celt-build/win32/: config.h
doc/: tcp-protocol.txt  udp-protocol.txt
